--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,15 @@ body
     margin: 0;
     padding: 0;
 }
+
+#cabecera
+{
+    background: cyan;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
 #container 
 {
     width: 70%;
